# GelHook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gelhook.h  hook_demo.py
.github/workflows/: ci.yml
examples/: basic.c  breakpoint.c  eat.c  guard_page.c  hotpatch.c  hw_breakpoint.c  iat.c  manager.c  plt.c  reentry.c  rehook.c  site_hook.c  vtable.cpp  vtable_swap.cpp
examples/python/: README.md  hook_demo.py  hook_lib.c
extras/: README.md  decoder_capstone.c  decoder_zydis.c
